Closed Bug 1843863 Opened 2 years ago Closed 2 years ago

text-combine-upright does not play well with RTL

Categories

(Core :: Layout: Text and Fonts, defect)

defect

Tracking

()

RESOLVED FIXED
117 Branch
Tracking Status
firefox117 --- fixed

People

(Reporter: jfkthame, Assigned: jfkthame)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

If content using text-combine-upright in vertical writing mode happens to have RTL directionality, and scaling is used to fit the content into the line's block-direction size, we end up misplacing the text.

Testcase: https://codepen.io/jfkthame/pen/YzRaMVY

Basically, we need to account for the right-to-left-ness when setting the origin
for applying the scale factor.

Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b817fe456974 Fix the rendering of RTL text in a text-combine-upright element. r=emilio
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/41073 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 117 Branch
Upstream PR merged by moz-wptsync-bot
Regressions: 1851726
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: