Bug 1843863 - Fix the rendering of RTL text in a text-combine-upright element. r=emilio

Basically, we need to account for the right-to-left-ness when setting the origin
for applying the scale factor.

Differential Revision: https://phabricator.services.mozilla.com/D183767